--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,101 +1,6 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/movie_detail"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:orientation="vertical"
-    tools:context="com.example.android.popularmovies.DetailActivity">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="3"
-        android:background="@color/background_title_film">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="20dp"
-            android:layout_marginLeft="25dp"
-            android:id="@+id/game_name"
-            android:text="@string/film_name"
-            android:textColor="@color/title_film"
-            android:textSize="25dp"/>
-    </LinearLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:layout_weight="2"
-        android:layout_marginTop="5dp">
-        <ImageView
-            android:layout_width="130dp"
-            android:layout_height="180dp"
-            android:id="@+id/poster"
-            android:layout_marginLeft="15dp"
-            android:src="@drawable/ic_launcher"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/date"
-            android:layout_toRightOf="@+id/poster"
-            android:layout_alignParentTop="true"
-            android:layout_marginTop="15dp"
-            android:layout_marginLeft="30dp"
-            android:textSize="20sp"
-            android:text="@string/date"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/time"
-            android:layout_toRightOf="@+id/poster"
-            android:layout_below="@+id/date"
-            android:text="@string/time"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="5dp"
-            android:textSize="18dp"
-            android:textStyle="italic"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/vote"
-            android:layout_toRightOf="@+id/poster"
-            android:layout_below="@+id/time"
-            android:layout_marginLeft="30dp"
-            android:text="@string/vote"
-            android:layout_marginTop="10dp"
-            android:textSize="10dp"
-            android:textStyle="bold"/>
-        <Button
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/btn_vote"
-            android:layout_toRightOf="@+id/poster"
-            android:layout_below="@+id/vote"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="10dp"
-            android:text="@string/btn_vote"
-            style="?android:attr/borderlessButtonStyle"
-            android:background="@color/background_btn_favourite"
-            />
-
-    </RelativeLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="2">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-        <VideoView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-    </LinearLayout>
-
-</LinearLayout>
+    tools:ignore="MergeRootFrame" />
