--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,18 +1,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".MainActivity">
-    <group
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" >
-        <item android:id="@+id/popular"
-            android:title="@string/popular">
-        </item>
-
-        <item android:id="@+id/rate"
-            android:title="@string/rate">
-        </item>
-    </group>
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <item android:id="@+id/action_sort_by"
+        android:title="@string/action_sort_by"
+        app:showAsAction="ifRoom">
+        <menu>
+            <group android:checkableBehavior="single">
+                <item android:id="@+id/action_sort_by_popularity"
+                    android:title="@string/action_sort_by_popularity" />
+                <item android:id="@+id/action_sort_by_rating"
+                    android:title="@string/action_sort_by_rating" />
+                <item android:id="@+id/action_sort_by_favorite"
+                    android:title="@string/action_sort_by_favorite" />
+            </group>
+        </menu>
+    </item>
 </menu>
